--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,77 @@
+body {
+  margin: 0px;
+  font-size: 16px;
+  font-family: 'Inter', sans-serif;
+}
+
 .color-box {
-  height: 50px;
+  height: 85vh;
+}
+
+/*
+---------- ---------- ----------
+FORM 
+---------- ---------- ----------
+*/
+
+#form-container {
+  width: 100%;
+  background: #fff;
+  padding: 10px;
+  box-shadow: 0px 4px 11px rgba(0, 0, 0, 0.15);
+}
+
+#form-container form {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+#form input,
+#form select {
+  margin: 0px 15px;
+}
+
+#color {
+  height: 35px;
   width: 50px;
+}
+
+#color-scheme {
+  border: 1px solid #D1D5DB;
+  border-radius: 5px;
+  box-shadow: 0px 1px 2px 0px #0000000d;
+  width: 312px;
+  padding-left: 5px;
+}
+
+#submit-btn {
+  font-weight: 500;
+  padding: 13px 11px;
+  background-color: #fff;
+  border: 1px solid #D1D5DB;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 4px;
+}
+
+
+/*
+---------- ---------- ----------
+COLOR SPACE 
+---------- ---------- ----------
+*/
+
+#color-container {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+div#color-container div {
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+#color-container p {
+  text-align: center;
 }
